# nimble-ci-engine

./: .gitignore  README.adoc  build.json  ci_run.sh  install.sh
extensions/job_executors/: host.sh  mapping.json
extensions/uri_resolvers/: curl.sh  mapping.json  vals.sh
extensions/when_evaluators/: mapping.json
extensions/when_evaluators/lib/: pyproject.toml  schedule_common.py
lib/: cgroupctl  cgroupctl.sh  duration2seconds  duration2seconds.sh  jqw  jqw.sh  log.sh
schema/: ci_config_schema-v1.json  common_patterns.json  directive_object.json  state_schema.json
scripts/: build_setpriv_args.jq  collect_variables.jq  collect_variables_scope.jq  compute_pipeline_status.jq  condition_context_job.jq  condition_context_pipeline.jq  create_schema_with_directives.jq  filter_ready_jobs.jq  filter_ready_pipelines.jq  list_any_entries_with_directives.jq  list_variables_entries_with_directives.jq  retry_policy_context_job.jq  select_tool.jq  update_job_state.jq  update_pipeline_state.jq  validate_free_input.jq
scripts/lib/: common.jq  condition_helpers.jq  identifier_validation.jq  retry_policy_helpers.jq  state_validation.jq
test/: asserts.sh  test.sh
test/cgroup_spec/: test_integration.sh
test/concurrency_spec/: concurrency_probe.sh  s01.yaml  s02.yaml  s03.yaml  s04.yaml  s05.yaml  s06.yaml  s07j.yaml  s07p.yaml  s08j.yaml  s08p.yaml  s09j.yaml  s09p.yaml  s10j.yaml  s10p.yaml  s11j.yaml  s11p.yaml  s12j.yaml  s12p.yaml  s13j.yaml  s13p.yaml  s14j.yaml  s14p.yaml  s15j.yaml  s15p.yaml  s16j.yaml  s16p.yaml  s17j.yaml  s17p.yaml  s18j.yaml  s18p.yaml  (+1 more)
(+48 files in other folders)
